<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="desc"></string>
    <string name="NA"></string>
    <string name="agree">同意</string>
    <string name="app_name">和佳ERP</string>
    <string name="login_title">企信</string>
    <string name="login_btn">登录</string>
    <string name="loginName">账户</string>
    <string name="password">密码</string>
    <string name="company">公司</string>
    <string name="search">搜索</string>
    <string name="loginnotice">登录遇到问题？</string>

    <string name="app_pane_pic_str">图片</string>
    <string name="app_pane_location_str">位置</string>
    <string name="app_pane_file_str">文件</string>
    <string name="app_pane_camera_str">拍照</string>

    <!-- Toolbar 标签内容 -->
    <string name="tlbar_BackUp">返回</string>
    <string name="tlbar_commit">提交</string>
    <string name="tlbar_add">添加</string>
    <string name="tlbar_cancel">取消</string>

    <!-- Toolbar 标题 -->
    <string name="tlbar_Title_productSearch">客户搜索</string>

    <!-- 数据查找失败提示 -->
    <string name="pdSearch_ErrorTitle1">找不到相关客户</string>

    <!-- 登录提示 -->
    <string name="message_invalid_username_password">错误的用户名或密码</string>
    <string name="message_server_unavailable">无法连接到服务器</string>
    <string name="message_user_disabled">用户被禁用</string>
    <string name="message_user_expired">账户已过期</string>
    <string name="message_userip_no_access">IP不合法,已被禁用</string>
    <string name="unrecoverable_error">发生未知异常,连接失败</string>

    <!-- 提示 -->
    <string name="user_not_exit">用户不存在</string>
    <string name="net_connect_error">网络连接异常，请稍后重试！</string>
    <string name="net_connect_reconnected">网络连接正常！</string>

    <!-- 网络和内存卡提示 -->
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
    <string name="check_sdcard">请检查内存卡！</string>
    <string name="menu_settings">设置</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!-- 缺省的服务器配置 -->
    <integer name="xmpp_port">5222</integer>
    <string name="xmpp_host">192.168.43.1</string>
    <string name="xmpp_service_name">192.168.43.1</string>

    <bool name="is_remember">true</bool>
    <bool name="is_autologin">false</bool>
    <bool name="is_novisible">false</bool>

    <!-- 数据库和文件路径 -->
    <string name="dir">/eap</string>
    <string name="app_dir">/app</string>
    <string name="db_dir">/database</string>
    <string name="img_dir">/img</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="action_settings">Settings</string>

    <string name="available_chars">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ^$._-@%!#$*\\</string>

    <!-- 字体大小 -->
    <string name="text_size_small">small</string>
    <string name="text_size_medium">medium</string>
    <string name="text_size_large">large</string>

    <string name="ar_reg_btn">注册</string>
    <string name="ar_input_phone">请输入注册码</string>
    <string name="ar_input_code">请输入验证码</string>
    <string name="msg_default_status">将二维码/条码放入框内，即可自动扫描</string>

    <!-- 通用设置 -->
    <string name="commonset_wrapdata">清除数据</string>
    <string name="commonset_wrapcache">清除缓存</string>
    <string name="commonset_versioncheck">检查版本</string>
    <string name="commonset_updata">更新应用</string>
    <string name="commonset_updatadate">应用数据下载</string>
    <string name="commonset_updatabasedate">基础数据下载</string>
    <string name="commonset_setpwd">修改密码</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>


    <string name="main_tab_im">消息</string>
    <string name="main_tab_contact">联系人</string>
    <string name="main_tab_business">业务</string>
    <string name="main_tab_workflow">审批</string>
    <string name="main_tab_my">我的</string>

    <!-- 签到页面设置  -->
    <string name="sgin_photouoload">签到拍照</string>
    <string name="sgin_in">签到</string>
    <string name="sgin_out">签退</string>

    <string name="menu_save_performance">保存数据</string>
    <string name="menu_feedback">意见反馈</string>

    <!-- actionbar -->
    <string name="action_left_content_back">返回</string>
    <string name="action_right_content_save">保存</string>
    <string name="action_right_content_send">送审</string>
    <string name="action_right_content_add">新增</string>
    <string name="action_right_content_commit">提交</string>
    <string name="action_right_content_title">大标题</string>
    <string name="action_right_right_title">右标题</string>
    <string name="action_right_right1_title">右标题1</string>


    <!-- 工作日志 -->
    <string name="work_Tile_Activity">工作日志</string>
    <string name="work_Tile_TaskTime">任务时间</string>
    <string name="work_Hint_TaskTime">请选择任务时间</string>
    <string name="work_Tile_WkAddress">工作地点</string>
    <string name="work_Hint_WkAddress">请选择工作地点</string>
    <string name="work_Tile_WkType">工作类型</string>
    <string name="work_Hint_WkType">请选择工作类型</string>
    <string name="work_Tile_PjName">客户名称</string>
    <string name="work_Hint_PjName">请选择客户名称</string>
    <string name="work_Tile_Address">地址</string>
    <string name="work_Tile_Contact">联系人</string>
    <string name="work_Tile_Tel">电话:</string>
    <string name="work_Tile_ipsTel">电话</string>
    <string name="work_Tile_contactduty">职务</string>
    <string name="work_Tile_WkTime">工时</string>
    <string name="work_Tile_MyTheme">主题</string>
    <string name="work_Tile_MyContent">内容</string>
    <string name="work_Hint_MyContent">请填写内容</string>
    <string name="work_Hint_MyContent_main">请填写主题(必填)</string>

    <!-- 销售订单 -->
    <string name="sellOrder_Tile_NewActivity">新增订单</string>
    <string name="sellOrder_Tile_Activity">订单录入</string>
    <string name="sellOrder_Tile_TvTitle">增加订单明细</string>
    <string name="sellOrder_Tile_Code">代码:</string>
    <string name="sellOrder_Tile_Product">产品:</string>
    <string name="sellOrder_Tile_Type">型号:</string>
    <string name="sellOrder_Tile_rcvcorr">单位:</string>
    <string name="sellOrder_Tile_Specification">规格:</string>
    <string name="sellOrder_Tile_Performance">性能:</string>
    <string name="sellOrder_Tile_Client">客户:</string>
    <string name="sellOrder_Tile_Terminal">终端:</string>
    <string name="sellOrder_Tile_Relation">联系人:</string>
    <string name="sellOrder_Tile_OverCount">结算:</string>
    <string name="sellOrder_Tile_Address">地址:</string>

    <!-- 考勤 -->
    <string name="buess_Title_CenterTitle">考勤打卡</string>

    <!-- dialog提示语 -->
    <string name="dialog_Message_saveData">正在保存数据</string>
    <string name="dialog_Message_submitData">正在提交数据</string>
    <string name="dialog_Message_upLoadData">正在加载数据</string>
    <string name="dialog_Message_selectData">正在查询数据</string>
    <string name="dialog_Message_saveSucc">保存成功</string>
    <string name="dialog_Message_upSucc">上传成功</string>

    <!-- dialog提示语 -->
    <string name="orderFinding_Title_TlActivity">订单查询</string>
    <string name="orderFinding_Title_RightTvSearch">查询</string>
    <string name="orderFinding_Title_RightTvReset">重置</string>

    <!-- 设置界面 -->
    <string name="setting_Title_TlActivity">设置</string>

    <!-- 修改密码界面 -->
    <string name="setPWord_Title_TlActivity">修改密码</string>
    <string name="setPWord_Title_NowAccount">当前用户：</string>
    <string name="setPWord_Title_OldPword">请输入旧密码</string>
    <string name="setPWord_Title_Pword">请输入新密码</string>
    <string name="setPWord_Title_AgainPword">请确认新密码</string>
    <string name="setPWord_Title_PwordSee">密码可见：</string>
    <string name="setPWord_Title_PWordHintContent">注：可使用的特殊符号为  ^$._-@%!#$*\</string>

    <!-- 关于 -->
    <string name="about_Title_TvActivity">关于和佳</string>
    <string name="about_Title_Hjsever">公司简介</string>
    <string name="about_Title_Hjpolicy">发展历程</string>
    <string name="about_Title_Hjcopyright">获得荣誉</string>
    <string name="about_Title_Hjinfor">联系我们</string>
    <!-- 登陆注册 -->
    <string name="register_Title_TvActivity">企业注册</string>

    <!-- 登陆注册 -->
    <string name="MyInfor_Title_DepartmentName">部门：</string>
    <!-- 个人信息中心 -->
    <string name="MyInfor_Title_PhotoPortrait">个人头像</string>
    <string name="toast_Title_PortraitFail">头像设置失败</string>
    <string name="toast_Title_ChangeSucc">修改成功</string>
    <string name="toast_Title_ChangeFail">修改失败</string>
    <string name="toast_Title_ChangePhone">修改电话号码</string>
    <string name="toast_Title_ChangeRemark">修改备注</string>
    <string name="toast_Title_ChangeEmail">修改邮箱</string>
    <string name="toast_Title_CheckMsg">验证信息</string>
    <string name="toast_Title_PhoneFail">请输入正确的手机号!</string>
    <string name="toast_Title_EmailFail">请输入正确的邮箱!</string>

    <!-- 登陆注册 -->
    <string name="oval_Title_TvActivity">审批单详情</string>

    <!-- 收入汇总 -->
    <string name="module_SellActivity_Tle">收入汇总</string>

</resources>
