<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_business_dgtdrech"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/action_dgtdre_layout"
        layout="@layout/actionbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_dgtdre_layout"
        android:background="@color/actionbar_title_bg"
        android:scrollbars="none">

        <LinearLayout style="@style/Item_LinearLayout_VerticalStyle">

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle"
                    android:text="@string/work_Tile_TaskTime" />


                <TextView
                    android:id="@+id/log_date_task"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:hint="@string/work_Hint_TaskTime" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle"
                    android:text="@string/work_Tile_WkAddress" />


                <TextView
                    android:id="@+id/log_flag_wadd"
                    style="@style/Item_LinearLayout_TvRightTitleImgDownStyle"
                    android:hint="@string/work_Hint_WkAddress" />

            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle"
                    android:text="@string/work_Tile_WkType" />

                <TextView
                    android:id="@+id/log_id_wtype"
                    style="@style/Item_LinearLayout_TvRightTitleImgDownStyle"
                    android:hint="@string/work_Hint_WkType" />

            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    android:id="@+id/pro_text"
                    style="@style/Item_LinearLayout_TVLeftTieleStyle"
                    android:text="@string/work_Tile_PjName" />

                <EditText
                    android:id="@+id/log_id_wproj"
                    style="@style/Item_LinearLayout_TvRightTitleImgStyle"
                    android:focusable="false"
                    android:hint="@string/work_Hint_PjName" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/Item_LinearLayout_TVLeftTieleStyle"
                    android:text="@string/work_Tile_Address" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/log_id_corr"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:focusable="false" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle"
                    android:text="@string/work_Tile_WkTime" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/log_dec_wtime"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle"
                    android:text="@string/work_Tile_MyTheme" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/log_var_wtitle"
                    style="@style/Item_LinearLayout_EdRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_height="@dimen/size_110"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle"
                    android:text="@string/work_Tile_MyContent" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/log_var_remark"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:hint="@string/work_Hint_MyContent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:visibility="gone"
        android:id="@+id/dgtdrechtml_submit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/per_button_shape"
        android:text="提交"
        android:textColor="@color/white" />

</RelativeLayout>
