<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal">

    <!--<TextView-->
    <!--android:id="@+id/item_line_id"-->
    <!--android:layout_width="25dp"-->
    <!--android:layout_height="25dp"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginRight="5dp"-->
    <!--android:background="@drawable/design_blue_point"-->
    <!--android:gravity="center"-->
    <!--android:text="0"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="12sp" />-->


    <LinearLayout style="@style/Item_LinearLayout_VerticalDefaultStyle">

        <LinearLayout
            android:id="@+id/linear_layout_id"
            style="@style/Item_Search_LinearLayoutHorizontalStyle"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_id_item"
                style="@style/Item_Search_TvTitleStyle"
                android:text="@string/sellOrder_Tile_Code" />

            <TextView
                android:id="@+id/item_id_item"
                style="@style/Item_Search_TvContentStyle" />
        </LinearLayout>

        <LinearLayout style="@style/Item_Search_LinearLayoutHorizontalStyle">

            <TextView
                android:id="@+id/pro_text"
                style="@style/Item_Search_TvTitleStyle"
                android:text="@string/sellOrder_Tile_Client" />

            <TextView
                android:id="@+id/item_peoject"
                style="@style/Item_Search_TvContentStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_overclient"
            style="@style/Item_Search_LinearLayoutHorizontalStyle"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_overclient"
                style="@style/Item_Search_TvTitleStyle"
                android:text="@string/sellOrder_Tile_OverCount" />

            <TextView
                android:id="@+id/item_overclient"
                style="@style/Item_Search_TvContentStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_besearch"
            style="@style/Item_Search_LinearLayoutHorizontalStyle">

            <TextView
                android:id="@+id/text_address"
                style="@style/Item_Search_TvTitleStyle"
                android:text="@string/sellOrder_Tile_Address" />

            <TextView
                android:id="@+id/item_client"
                style="@style/Item_Search_TvContentStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_chkparm"
            style="@style/Item_Search_LinearLayoutHorizontalStyle"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_chkparm"
                style="@style/Item_Search_TvTitleStyle"
                android:text="@string/sellOrder_Tile_Performance" />

            <TextView
                android:id="@+id/item_chkparm"
                style="@style/Item_Search_TvContentStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_varTel"
            style="@style/Item_Search_LinearLayoutHorizontalStyle"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_varTel"
                style="@style/Item_Search_TvTitleStyle"
                android:text="@string/work_Tile_Tel" />

            <TextView
                android:id="@+id/item_varTel"
                style="@style/Item_Search_TvContentStyle" />
        </LinearLayout>

        <View style="@style/Item_TextView_ActionBarViewDividerStyle" />
    </LinearLayout>
</LinearLayout>
