<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar_title_bg"
    android:orientation="vertical">

    <include layout="@layout/actionbar_layout" />

    <View style="@style/Item_View_DividerStyle" />

    <RelativeLayout
        style="@style/Item_RelativeLayout_DefaultStyle"
        android:layout_marginTop="@dimen/size_10">

        <ImageView
            android:id="@+id/ab_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/icon2" />


        <TextView
            android:id="@+id/tv_abouthj_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ab_icon"
            android:layout_centerHorizontal="true"
            android:maxLength="16"
            android:maxLines="1"
            android:text="何佳ERP 3.3.1"
            android:textColor="#ff333333"
            android:textSize="15.0sp" />

        <TextView
            android:id="@+id/tv_abouthj_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_abouthj_app"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/size_40"
            android:layout_marginTop="10dp"
            android:maxLength="16"
            android:maxLines="1"
            android:text="android版本 6.0"
            android:textColor="#ff333333"
            android:textSize="14.0sp" />

    </RelativeLayout>

    <View style="@style/Item_View_DividerStyle" />

    <TextView
        android:id="@+id/linear_sever"
        style="@style/Item_LinearLayout_TvTitleImgStyle2"
        android:layout_marginTop="@dimen/size_10"
        android:text="@string/about_Title_Hjsever" />

    <View style="@style/Item_View_DividerStyle" />

    <TextView
        android:id="@+id/linear_policy"
        style="@style/Item_LinearLayout_TvTitleImgStyle2"
        android:text="@string/about_Title_Hjpolicy" />

    <View style="@style/Item_View_DividerStyle" />

    <TextView
        android:id="@+id/linear_copyright"
        style="@style/Item_LinearLayout_TvTitleImgStyle2"
        android:text="@string/about_Title_Hjcopyright" />

    <View style="@style/Item_View_DividerStyle" />

    <TextView
        android:id="@+id/linear_information"
        style="@style/Item_LinearLayout_TvTitleImgStyle2"
        android:text="@string/about_Title_Hjinfor" />

    <View style="@style/Item_View_DividerStyle" />

    <!--<TextView--><!--android:layout_width="fill_parent"--><!--android:layout_height="0.2dp"--><!--android:layout_marginLeft="10dip"--><!--android:layout_marginRight="10dip"--><!--android:background="@drawable/reader_item_divider" />-->

</LinearLayout>